[metadata]
name = enveloc
version = 1.1.4
author = Aaron Wech
author_email = awech@usgs.gov
description = enveloc - envelope cross-correlation location method
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/awech/enveloc
download_url = https://github.com/awech/enveloc/archive/v1.1.4.tar.gz
classifiers =
	Programming Language :: Python :: 3.11
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering

[options]
install_requires =
	cython
	obspy
	cartopy
	scikit-learn
	utm
python_requires = >=3.8
include_package_data = True